...
                            <constraint firstItem="F97-dw-LgN" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Oys-QP-tWZ"/>
                            <constraint firstItem="F97-dw-LgN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="b00-VD-yQo"/>
                            <constraint firstItem="f6D-gX-Eyj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hKF-as-TaT"/>
                            <constraint firstItem="f6D-gX-Eyj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="u7e-m4-ZGv"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Todo List" id="QYI-93-pkc">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Y3X-Gx-cD0">
                            <connections>
                                <segue destination="51P-j6-Oeb" kind="show" identifier="ShowAddViewController" id="epO-WO-6ea"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSj-GX-RE2">
                                <rect key="frame" x="16" y="76" width="50" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="required" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hHf-pD-CZB">
                                <rect key="frame" x="74" y="72" width="230" height="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                <connections>
                                    <outlet property="delegate" destination="51P-j6-Oeb" id="lZT-tW-jw1"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="OPW-hb-bx6">
                                <rect key="frame" x="99" y="268" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="DeadlineSwitch"/>
                                <connections>
                                    <action selector="deadlineSwitch:" destination="51P-j6-Oeb" eventType="valueChanged" id="EEK-iB-gzb"/>
                                </connections>
                            </switch>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="sZf-rS-Eir">
                                <rect key="frame" x="142" y="221" width="37" height="37"/>
...
